--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
   ],
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-jshint": "~1.4.0",
-    "jshint-stylish": "~0.1.5"
-  },
-  "scripts": {
-    "gulp": "gulp"
+    "gulp-jshint": "^1.11.1",
+    "jshint-stylish": "^2.0.1"
   }
 }
